# seasocks_cmake

./: CMakeLists.txt  README.md  main.cpp
cmake/: SeasocksProject.cmake
web/: app.js  index.html
